2004-06-09  Martin Blom  <martin@blom.org>

	* Released device.audio 5.1.

	* device.audio: Clear audio buffers before playing the first time
	(removes the noise in the beginning). 

2004-06-08  Martin Blom  <martin@blom.org>

	* Added 7.1 multichannel support. And there was much rejoicing.

	* Added missing TAG_DONEs to ScanAudioModes.

2004-06-04  Martin Blom  <martin@blom.org>

	* Forked off BRANCH_6.

2004-06-02  Martin Blom  <martin@blom.org>

	* Released AHI preferences 5.12.

	* AHI: Added a not-so-beautiful hack to make sure modes from
	device.audio modes does not show up in the Unit mode lists.

	* Released device.audio 5.0.

	* Added a new driver, device.audio, that plays sound using one of
	AHI's units. And there was much rejoicing.

2004-06-01  Martin Blom  <martin@blom.org>

	* Added the good old ScanAudioModes to the example collection.

2004-02-19  Martin Blom  <martin@blom.org>

	* Docs: Added note about AddAudioModes and sound card/AC97
	initializing.

2004-02-14  Martin Blom  <martin@blom.org>

	* ahi.device: I forgot to update dspechofuncs_68k.s when removing
	the need for gasp. Fixed.

	* ahi.device: Applied a new batch of AmigaOS 4.x pathches from
	Davy. Thanks!

2004-02-09  Martin Blom  <martin@blom.org>

	* Released filesave.audio 5.5.

	* filesave.audio: Applied AOS4 patches from Davy Wentzler.

2004-02-04  Martin Blom  <martin@blom.org>

	* Released aros.audio 5.1.

	* aros.audio: Added "100 Hz" patches from Georg Steger.

2004-01-31  Martin Blom  <martin@blom.org>

	* aros.audio: Minor OSS tweaks.

2004-01-25  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.16.

	* emu10kx.audio: Applied AmigaOS 4 patches (with minor
	modifications) from Davy Wentzler.

	* ahi.device: Removed gasp dependency. gasp is no longer required
	for building AHI.

	* Drivers: Applied patches to make mode file generation work
	without using (the now obsolete tool) gasp. [Fabio Alemagna]

2004-01-18  Martin Blom  <martin@blom.org>
